--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
 	</dependencies>
 
 	<build>
+	<finalName>bittruck-api</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
