Atualizacao Collection e log hibernate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,8 +26,8 @@ spring.datasource.tomcat.default-auto-commit=true
 
 #Configurações adicionais de log
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
 
 #Configuração de log
 logging.level.root=error
