Novas melhorias de busca de marca e modelo por começo do nome

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,8 +26,9 @@ spring.datasource.tomcat.default-auto-commit=true
 
 #Configurações adicionais de log
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=false
-spring.jpa.show-sql=false
+#spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 #Configuração de log
 logging.level.root=error
@@ -36,11 +37,11 @@ logging.level.org.hibernate=error
 
 
 spring.datasource.url=jdbc:h2:mem:bittruckdb
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:file:./data/bibliotecadb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.username=bittruck
+spring.datasource.password=bittrucksJASHUAshuASAsoih
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
