--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,6 +44,14 @@ spring.datasource.username=bittruck
 spring.datasource.password=bittrucksJASHUAshuASAsoih
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+#Configurações de e-mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bittruckdev@gmail.com
+spring.mail.password=lsiyeeehtouowhba
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 # Hibernate ddl auto (create, create-drop, validate, update)
 #spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.show-sql=true
