--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.main.allow-bean-definition-overriding=true
 
 #Configuração token
 br.com.indepdevbr.bittruck.app.jwtSecret=bittruck-2019
-br.com.indepdevbr.bittruck.app.jwtExpirationInMs=604800000
+br.com.indepdevbr.bittruck.app.duracaoTokenAutenticacao=604800000
+br.com.indepdevbr.bittruck.app.duracaoTokenAtivacaoTransportadora=7200000
 
 #Configuração de conexão com banco de dados
 #spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
@@ -34,6 +35,7 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.root=error
 logging.level.org.springframework.web=error
 logging.level.org.hibernate=error
+logging.level.br.com.indepdevbr.services.imp=info
 
 
 spring.datasource.url=jdbc:h2:mem:bittruckdb
@@ -51,7 +53,3 @@ spring.mail.username=bittruckdev@gmail.com
 spring.mail.password=lsiyeeehtouowhba
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-# Hibernate ddl auto (create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.show-sql=true
