--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,8 +28,8 @@ spring.datasource.tomcat.default-auto-commit=true
 #Configurações adicionais de log
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.generate-ddl=false
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 #Configuração de log
 logging.level.root=error
