Adicionando inclusão de veiculio, solicitacao vinculo transportadora motorista, listar solicitacoes vinculo transportadora motorista por id motorista, responder solicitacao vinculo transportadora motorista, cadastro de admins

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,9 +38,9 @@ logging.level.org.hibernate=error
 logging.level.br.com.indepdevbr.services.imp=info
 
 
-spring.datasource.url=jdbc:h2:mem:bittruckdb
+#spring.datasource.url=jdbc:h2:mem:bittruckdb
 #spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:file:./data/bibliotecadb
+spring.datasource.url=jdbc:h2:file:./data/bibliotecadb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=bittruck
 spring.datasource.password=bittrucksJASHUAshuASAsoih
